resolve bugs and done with some updates change light & dark icons to google cdn to assets clear button not working resolve resolve bug that in light/dark mode

--- a/style.css
+++ b/style.css
@@ -35,8 +35,9 @@ body {
 .header{
   padding-block: .5rem;
 }
-
+  
 .toggle-container{
+  transition: all .5s;
   position: relative;
   background-color: white;
   width: 50px;
@@ -50,10 +51,14 @@ body {
 }
 
 .toggle-container img{
+  filter: var(--dark)     ;
+}
+.toggle-container img{
   width: 40%;
 }
 
 .toggle{
+  transition: all .5s;
   position: absolute;
   top: 0;
   left: 0;
